2004-01-17  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/i486/bits/atomic.h (atomic_add): Fix test for using
	atomic_decrement.  Patch by Davin McCall.

2004-01-13  Daniel Jacobowitz  <drow@mvista.com>

	* sysdeps/powerpc/nofpu/sim-full.c (__sim_exceptions)
	(__sim_disabled_exceptions, __sim_round_mode): Declare with
	hidden data and nocommon.
	* sysdeps/powerpc/nofpu/soft-supp.h (__sim_exceptions)
	(__sim_disabled_exceptions, __sim_round_mode): Use
	libc_hidden_proto.
	* sysdeps/powerpc/soft-fp/sfp-machine.h (__sim_exceptions)
	(__sim_disabled_exceptions, __sim_round_mode): Likewise.

2004-01-16  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h: Define PT_IA_64_HP_OPT_ANOT, PT_IA_64_HP_HSL_ANOT, and
	PT_IA_64_HP_STACK.

2004-01-16  Richard Henderson  <rth@redhat.com>

        * include/unistd.h (__libc_enable_secure): Mark attribute_relro.
        (__libc_enable_secure_internal): Likewise.

        * elf/dl-load.c: Don't declare __libc_stack_end.
        * sysdeps/generic/libc-start.c: Likewise.
        * sysdeps/unix/sysv/linux/dl-execstack.c: Likewise.
        * sysdeps/generic/segfault.c: Likewise.  Include ldsodefs.h.
        * sysdeps/generic/backtrace.c: Likewise.

2004-01-15  Ulrich Drepper  <drepper@redhat.com>

	* Versions.def: Add GLIBC_2.3.4.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/alpha/sysdep.h: Revert last change.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/alpha/dl-machine.h (RTLD_START): Use _dl_argv_internal.

	* sysdeps/unix/alpha/sysdep.h [PIC] (SYSCALL_ERROR_HANDLER): Use
	!samegp relocation.

2004-01-15  Richard Henderson  <rth@redhat.com>

	* sysdeps/unix/sysv/linux/alpha/Makefile [stdlib]: Process
	ucontext-offsets.sym.
	* sysdeps/unix/sysv/linux/alpha/getcontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/makecontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/setcontext.S: New file.
	* sysdeps/unix/sysv/linux/alpha/swapcontext.S: New file.